--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,9 +31,11 @@ dist.dir=
 dist.jar=
 dist.javadoc.dir=
 excludes=
+file.reference.GestaoRHPOO-lib=lib
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.GestaoRHPOO-lib}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
